--- a/css/main.css
+++ b/css/main.css
@@ -492,15 +492,15 @@ padding: 0;
 
 .btn-submit {
   width: 100%;
-  background-color: #4fcccd;
+  background-color: #a51c30;
   color: #fff;
   font-size: 14px;
   font-weight: 300;
   letter-spacing: 5px;
   text-transform: uppercase;
-  border-radius: 3px;
+  border-radius: 0px;
   margin-top: 5px;
-  border-bottom: 3px solid #2f9697;
+  border-bottom: 6px solid #63121e;
   box-shadow: none;
   padding: 10px;
 }
@@ -2734,6 +2734,6 @@ span.stButton_gradient,
 }
 
 .searche-style-all label{
-   // color: #a51c30 ;
+   
    
 }
